Add internationalization and translations

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	{% load staticfiles %}
 	{% load humanize %}
+	{% load i18n %}
 	<head>
 		<meta charset="utf-8">
 
@@ -36,44 +37,44 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
 						<li>
-							<a href="{% url "create_paste" %}"><i class="fa fa-file-text-o"></i> Create new paste</a>
+							<a href="{% url "create_paste" %}"><i class="fa fa-file-text-o"></i> {% trans "Create new paste" %}</a>
 						</li>
 						<li>
-							<a href="{% url "trends" %}"><i class="fa fa-bar-chart-o"></i> Treniding pastes</a>
+							<a href="{% url "trends" %}"><i class="fa fa-bar-chart-o"></i> {% trans "Treniding pastes" %}</a>
 						</li>
 					</ul>
 
 					<ul class="nav navbar-nav navbar-right">
 						{% if user.is_authenticated %}
 							<li>
-								<a href="{% url "user" user.username %}"><i class="fa fa-files-o"></i> My pastes</a>
+								<a href="{% url "user" user.username %}"><i class="fa fa-files-o"></i> {% trans "My pastes" %}</a>
 							</li>
 							<li class="dropdown">
 								<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes"><i class="fa fa-user"></i> {{ user.username }}<span class="caret"></span></a>
 								<ul class="dropdown-menu" aria-labelledby="themes">
 									<li>
-										<a href="{% url "profile" %}"><i class="fa fa-user"></i> Profile</a>
+										<a href="{% url "profile" %}"><i class="fa fa-user"></i> {% trans "Profile" %}</a>
 									</li>
 									<li>
-										<a href="{% url "settings" %}"><i class="fa fa-gear"></i> Settings</a>
+										<a href="{% url "settings" %}"><i class="fa fa-gear"></i> {% trans "Settings" %}</a>
 									</li>
 									<li class="divider"></li>
 									<li>
-										<a href="{% url "logout" %}"><i class="fa fa-sign-out"></i> Logout</a>
+										<a href="{% url "logout" %}"><i class="fa fa-sign-out"></i> {% trans "Logout" %}</a>
 									</li>
 								</ul>
 							</li>
 							{% if user.is_staff %}
 								<li>
-									<a href="/admin/"><i class="fa fa-user"></i> Admin panel</a>
+									<a href="/admin/"><i class="fa fa-user"></i> {% trans "Admin panel" %}</a>
 								</li>
 							{% endif %}
 						{% else %}
 						<li>
-							<a href="{% url "registration" %}"><i class="fa fa-user"></i> Sign in</a>
+							<a href="{% url "registration" %}"><i class="fa fa-user"></i> {% trans "Sign in" %}</a>
 						</li>
 						<li>
-							<a href="{% url "login" %}"><i class="fa fa-sign-in"></i> Log in</a>
+							<a href="{% url "login" %}"><i class="fa fa-sign-in"></i> {% trans "Log in" %}</a>
 						</li>
 						{% endif %}
 					</ul>
@@ -90,7 +91,7 @@
 				</div>
 				<div class="col-lg-3">
 					<div class="page-header no-margin-top">
-						<h3 class="no-margin-top">Recently added</h3>
+						<h3 class="no-margin-top">{% trans "Recently added" %}</h3>
 					</div>
 					<div class="col-lg-13">
 						<div class="bs-component">
