--- a/src/templates/password_reset/recovery_done.html
+++ b/src/templates/password_reset/recovery_done.html
@@ -1,16 +1,18 @@
 {% extends 'base.html' %}
 
-{% block title %}Password recovery{% endblock %}
+{% load i18n %}
+
+{% block title %}{% trans "Password recovery" %}{% endblock %}
 
 {% block content %}
 
 	<div class="well bs-component">
 		<legend>
-			New password set
+			{% trans "New password set" %}
 		</legend>
 		
 		<div class="alert alert-success">
-			Your password has successfully been reset. You can use it right now on the login page.
+			{% trans "Your password has successfully been reset. You can use it right now on the login page." %}
         </div>
 	</div>
 	
