--- a/src/templates/password_reset/recovery_form.html
+++ b/src/templates/password_reset/recovery_form.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}Password recovery{% endblock %}
+{% load i18n %}
+
+{% block title %}{% trans "Password recovery" %}{% endblock %}
 
 {% block content %}
 
@@ -9,7 +11,7 @@
 			{% include "messages.html" with messages=form.non_field_errors type='danger' %}
 			<fieldset>
 				<legend>
-					Password recovery
+					{% trans "Password recovery" %}
 				</legend>
 				
 				{% include "fields.html" with fields=form %}
@@ -17,7 +19,7 @@
 				<div class="form-group">
 					<div class="col-lg-10 col-lg-offset-3">
 						<button type="submit" class="btn btn-primary">
-							Recover my password
+							{% trans "Recover my password" %}
 						</button>
 					</div>
 				</div>
