--- a/src/templates/password_reset/reset_sent.html
+++ b/src/templates/password_reset/reset_sent.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 
-{% block title %}Password recovery{% endblock %}
+{% load i18n %}
+
+{% block title %}{% trans "Password recovery" %}{% endblock %}
 
 {% block content %}
 
 	<div class="well bs-component">
 		<legend>
-			Password recovery sent
+			{% trans "Password recovery sent" %}
 		</legend>
 		<div class="alert alert-success">
-			An email was sent to <strong>{{ email }}</strong>. Use the link in it to set a new password.
+			{% blocktrans with email_t=email %}An email was sent to <strong>{{ email_t }}</strong>. Use the link in it to set a new password.{% endblocktrans %}
 		</div>
 	</div>
 	
