--- a/src/templates/pastes/comments.html
+++ b/src/templates/pastes/comments.html
@@ -1,9 +1,10 @@
+{% load i18n %}
 {% load staticfiles %} <script src="{% static 'js/comments.js' %}"></script>
 
 <div class="row top15">
 	<div class="col-lg-12">
 		<div class="page-header no-margin-top">
-			<h3 class="no-margin-top">Comments</h3>
+			<h3 class="no-margin-top">{% trans "Comments" %}</h3>
 		</div>
 	</div>
 </div>
@@ -25,7 +26,7 @@
 						<span class="comment-date">{{ node.created|naturaltime }}</span>
 						{% if user.is_authenticated %}
 							{% if node.level < 3 %}
-								<span class="comment-reply"><a href="#" id="node_{{ node.pk }}">reply</a></span>
+								<span class="comment-reply"><a href="#" id="node_{{ node.pk }}">{% trans "reply" %}</a></span>
 							{% endif %}
 						{% endif %}
 					</p>
@@ -57,7 +58,7 @@
 			{% endif %}
 
 			<legend>
-				Add new comment
+				{% trans "Add new comment" %}
 			</legend>
 			
 			{% include "fields.html" with fields=form %}
@@ -65,9 +66,9 @@
 			<div class="form-group">
 				<div class="col-lg-10 col-lg-offset-0">
 					<button id="comment_submit" type="submit" class="btn btn-primary">
-						Add comment
+						{% trans "Add comment" %}
 					</button>
-					<a href="#" id="cancel_reply">Cancel</a>
+					<a href="#" id="cancel_reply">{% trans "Cancel" %}</a>
 				</div>
 			</div>
 		</fieldset>
