--- a/src/templates/users/login.html
+++ b/src/templates/users/login.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 
-{% block title %}Login{% endblock %}
+{% load i18n %}
+{% load widget_tweaks %}
+
+{% block title %}{% trans "Login" %}{% endblock %}
 
 {% block content %}
-{% load widget_tweaks %}
 	<div class="well bs-component">
 		<form method="post" class="form-horizontal">{% csrf_token %}
 			{% include "messages.html" with messages=form.non_field_errors type='danger' %}
 			<fieldset>
 				<legend>
-					Login
+					{% trans "Login" %}
 				</legend>
 				
 				{% include "fields.html" with fields=form %}
@@ -17,9 +19,9 @@
 				<div class="form-group">
 					<div class="col-lg-10 col-lg-offset-3">
 						<button type="submit" class="btn btn-primary">
-							Submit
+							{% trans "Login" %}
 						</button>
-						<a href="{% url "password_reset_recover" %}" class="btn btn-default">Forgot password?</a>
+						<a href="{% url "password_reset_recover" %}" class="btn btn-default">{% trans "Forgot password?" %}</a>
 						<input type="hidden" name="next" value="/" />
 					</div>
 				</div>
