--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,6 +3,7 @@
 	{% load staticfiles %}
 	{% load humanize %}
 	{% load i18n %}
+	{% get_available_languages as LANGUAGES %}
 	<head>
 		<meta charset="utf-8">
 
@@ -43,7 +44,6 @@
 							<a href="{% url "trends" %}"><i class="fa fa-bar-chart-o"></i> {% trans "Treniding pastes" %}</a>
 						</li>
 					</ul>
-
 					<ul class="nav navbar-nav navbar-right">
 						{% if user.is_authenticated %}
 							<li>
@@ -77,6 +77,20 @@
 							<a href="{% url "login" %}"><i class="fa fa-sign-in"></i> {% trans "Log in" %}</a>
 						</li>
 						{% endif %}
+					    <li class="dropdown">
+					        <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">{% trans "Language" %}<b class="caret"></b></a>
+					        <ul class="dropdown-menu" aria-labelledby="themes">
+						    {% for lang in LANGUAGES %}
+						        <li>
+						        	<a href="#" onclick="document.setLang{{ lang.1 }}.submit();return false;"><i class="fa fa-user"></i> {{ lang.1 }}</a>
+				                    <form name="setLang{{ lang.1}}" action="/i18n/setlang/" method="POST">{% csrf_token %}
+				                        <input name="next" type="hidden" value="/" />
+				                        <input type="hidden" name="language" value="{{ lang.0 }}" />
+				                    </form>
+				                </li>
+					            {% endfor %}    
+							</ul>
+					    </li>
 					</ul>
 
 				</div>
