--- a/src/templates/pastes/paste.html
+++ b/src/templates/pastes/paste.html
@@ -13,6 +13,23 @@
 				<div class="page-header no-margin-top">
 					<h3 class="no-margin-top">{{paste.title}}</h3>
 				</div>
+				<div class="">
+					Language: 
+						{% if paste.syntax != 'NONE' %}						
+							{{paste.syntax}}
+						{% else %} 
+							Plaintext
+						{% endif %} | 
+					Created: {{paste.created}} | 
+					Author: 
+						{% if paste.author != None %} 
+							{{paste.author}}
+						{% else %} 
+							Anonymous 
+						{% endif %}  |
+					Size: {{paste.size}}kB | Hits: {{paste.hits}} |
+					Expires: {{paste.expire_date}} 
+				</div>
 			</div>
 		</div>
 		<div class="row">
