Add missing tranlations

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -73,7 +73,7 @@
 								</ul>
 							</li>
 							<li>
-								<a class="dropdown-toggle" href="/notifications/" id="themes"><i class="fa fa-envelope"></i> Activity <span class="badge"> {{ unread_count }}</span></a>
+								<a class="dropdown-toggle" href="/notifications/" id="themes"><i class="fa fa-envelope"></i> {% trans "Activity" %} <span class="badge"> {{ unread_count }}</span></a>
 							</li>
 						{% else %}
 						<li>
@@ -98,7 +98,6 @@
 							</ul>
 					    </li>
 					</ul>
-
 				</div>
 			</div>
 		</nav>
