--- a/src/templates/notifications/list.html
+++ b/src/templates/notifications/list.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
 {% load humanize %}
 
-{% block title %}Notifications{% endblock %}
+{% block title %}{% trans "Notifications" %}{% endblock %}
 
 {% block content %}
 	
@@ -10,7 +11,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="page-header no-margin-top">
-					<h3 class="no-margin-top">Notifications</h3>
+					<h3 class="no-margin-top">{% trans "Notifications" %}</h3>
 				</div>
 			</div>
 		</div>
@@ -26,9 +27,9 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th>Description</th>
-							<th>When</th>
-							<th>Read</th>
+							<th>{% trans "Description" %}</th>
+							<th>{% trans "When" %}</th>
+							<th>{% trans "Read" %}</th>
 						</tr>
 					</thead>
 					{% if notifications %}
@@ -38,13 +39,13 @@
 								<td><a href="{{ notice.actor.get_absolute_url }}">{{ notice.actor }}</a>
 								    {{ notice.verb }}
 								    {% if notice.target %}
-								      in
+								      {% trans "in" %}
 								      <a href="{{ notice.target.get_absolute_url }}">{{ notice.target }}</a>
 								    {% endif %}
 								</td>
 								<td>{{ notice.timestamp | naturaltime }}</td>
 								<td><i class="fa fa-{% if notice.unread %}circle-o{% else %}check-circle-o{% endif %}"></i>
-									<a href="{{ notice.action_object.get_absolute_url }}">Read</a>
+									<a href="{{ notice.action_object.get_absolute_url }}">{% trans "Read" %}</a>
 								</td>
 							</tr>
 						{% endfor %}
