--- a/src/templates/pastes/paste.html
+++ b/src/templates/pastes/paste.html
@@ -3,7 +3,7 @@
 {% load widget_tweaks %}
 {% load syntax_highlighting %}
 
-{% block title %}Paste{% endblock %}
+{% block title %}{{ paste.title }}{% endblock %}
 
 {% block content %}
 	<style> {{ ""|get_css }} </style>
