--- a/src/templates/users/registration.html
+++ b/src/templates/users/registration.html
@@ -30,7 +30,7 @@
 				</div>
 				</div>
 				<div class="col-lg-4">
-					<p>Use your existing account from...</p>
+					<p>{% trans "Use your existing account from..." %}</p>
 					<p><a href="{% url 'socialauth_begin' 'facebook' %}"><img src="{% static 'images/fb-login.png' %}" alt="Login with facebook" /></a></p>
 					<p><a href="{% url 'socialauth_begin' 'google-oauth2' %}"><img src="{% static 'images/google-login.png' %}" alt="Login with google" /></a></p>
 				</div>
