Hits is session scoped and add user url to description (instead of simple username).

--- a/src/templates/pastes/paste.html
+++ b/src/templates/pastes/paste.html
@@ -23,7 +23,7 @@
 					Created: {{paste.created}} | 
 					Author: 
 						{% if paste.author != None %} 
-							{{paste.author}}
+							<a href="{% url "user" paste.author %}">{{paste.author}}</a>
 						{% else %} 
 							Anonymous 
 						{% endif %}  |
