Add comment delete by user function

--- a/src/templates/pastes/comments.html
+++ b/src/templates/pastes/comments.html
@@ -33,6 +33,9 @@
 						<span class="comment-date">{{ node.created|naturaltime }}</span>
 						{% if user.is_authenticated %}
 							<span class="comment-reply"><a href="#" id="node_{{ node.pk }}">{% trans "reply" %}</a></span>
+							{% if user.pk == node.author.pk %}
+								<span class="comment-delete"><a href='{% url "delete_comment" node.pk %}'>{% trans "delete" %}</a></span>
+							{% endif %}
 						{% endif %}
 					</p>
 					{% autoescape off %}
