Fix clear textarea on reply cancel

--- a/src/static/css/bootstrap-extend.css
+++ b/src/static/css/bootstrap-extend.css
@@ -27,6 +27,10 @@
 	margin: 0px 0px 0px 10px;
 }
 
+.comment-delete {
+	margin: 0px 0px 0px 10px;
+}
+
 #cancel_reply {
 	display: none;
 	margin: 0px 0px 0px 15px;
