Add some template and css fixes

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -93,7 +93,7 @@
 						</li>
 						{% endif %}
 					    <li class="dropdown">
-					        <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">{% trans "Language" %}<b class="caret"></b></a>
+					        <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes"><i class="fa fa-flag"></i> {% trans "Language" %}<b class="caret"></b></a>
 					        <ul class="dropdown-menu" aria-labelledby="themes">
 						    {% for lang in LANGUAGES %}
 						        <li>
