--- a/src/templates/pastes/paste.html
+++ b/src/templates/pastes/paste.html
@@ -14,7 +14,7 @@
 				<div class="page-header no-margin-top">
 					<h3 class="no-margin-top">{{ paste.title }}</h3>
 				</div>
-				<div class="">
+				<div class="bottom5">
 					{% trans "Language" %}: 
 						{% if paste.syntax != 'NONE' %}						
 							{{paste.syntax}}
