--- a/src/templates/pastes/comments.html
+++ b/src/templates/pastes/comments.html
@@ -25,8 +25,8 @@
 	
 		<div class="row comment-row">
 			<a class="anchor" name="{{ node.pk }}"></a>
-			<div class='col-lg-{{ "12"|subtract:node.level }} col-lg-offset-{{ node.level }}'>
-				<div class="well col-lg-12{% if node.deleted %} comment-deleted{% endif %}">
+			<div class='col-xs-{{ "12"|subtract:node.level }} col-xs-offset-{{ node.level }}'>
+				<div class="well col-xs-12{% if node.deleted %} comment-deleted{% endif %}">
 					<p>
 						<span class="comment-id"><a href="#{{ node.pk }}">#{{ node.pk }}</a></span>
 						<span class="comment-author"><a href='{% url "user" node.author.username %}'>{{ node.author.username }}</a></span>
