--- a/src/templates/pastes/comments.html
+++ b/src/templates/pastes/comments.html
@@ -34,6 +34,9 @@
 						{% if user.is_authenticated %}
 							<span class="comment-reply"><a href="#" id="node_{{ node.pk }}">{% trans "reply" %}</a></span>
 							{% if user.pk == node.author.pk and node.deleted == False %}
+								{% if node.is_leaf_node %}
+									<span class="comment-delete"><a href='{% url "update_comment" node.pk %}'>{% trans "edit" %}</a></span>
+								{% endif %}
 								<span class="comment-delete"><a href='{% url "delete_comment" node.pk %}'>{% trans "delete" %}</a></span>
 							{% endif %}
 						{% endif %}
